--- a/Webteknologier/Hjemmeside/index.html
+++ b/Webteknologier/Hjemmeside/index.html
@@ -1,32 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
+  <meta charset="UTF-8">
+  <title>Min Hjemmeside</title>
+  <style>
+     body {
+     background-image: url('billeder/background.jpg'); /*Sætter baggrundsbillede*/
+     background-size:cover; /*Gør, at billedet dækker hele baggrounden*/
+     background-position:center; /*Centrerer billeder*/
+     font-family:'Comic Sans MS',cursive ;/*Ændre skrifttypen til Times
+ 
+     align-items: center; /* Centrerer indholdet vertikalt */
+    height: 100vh; /* Sætter højden på body til 100% af viewport højden */
+            text-align: center; /* Centrerer teksten inden for div'ene */
+        }
+        .content {
+            max-width: 600px; /* Sætter en maksimal bredde for indholdet */
+        }
+
+          .contact-box{
+            width: 300px; /* Boksens bredde */
+            height: 150px; /* Boksens højde */
+            background-color: #ea6565; /* Farve på boksen */
+            margin: 50px auto; /* Centrerer boksen med margin */
+            border: 2px solid #851502; /* Kant omkring boksen */
+            position: relative; /* Giver mulighed for absolut positionering af indhold */
+            overflow: hidden; /* Skjuler indhold, der går uden for boksen */
+            cursor: pointer; /* Ændrer musemarkøren til pointer */
+        }
+        .contact-info {
+            display: none; /* Skjuler kontaktoplysningerne som standard */
+            position: absolute; /* Gør det muligt at placere dem inden for boksen */
+            top: 50%; /* Placerer dem i midten vertikalt */
+            left: 50%; /* Placerer dem i midten horisontalt */
+            transform: translate(-50%, -50%); /* Justerer for at centrere perfekt */
+            color: white; /* Tekstfarve */
+            text-align: center; /* Centrerer teksten */
+        }
+    </style>
 </head>
-<body background-color="rgb(20,90,120)">
-    <h1>Velkommen til min hjemmeside!</h1>
-    <p>Dette er et afsnit, hvor jeg præsenterer mig selv.</p>
-    <a href="side2.html">Gå til side 2 </a>
-    <h2>Om mig</h2>
-    <p>Her kan du skrive en kort beskrivelse om dig selv.</p>   
-    <h2>Mine projekter</h2>
-    <p>Beskriv nogle af de projekter, du har arbejdet på.</p>
-    <h2>Kontakt</h2>
-    <p>Du kan kontakte mig via e-mail: <a href="mailto:fx@eksempel.com">fx@eksempel.com</a></p>
+<body>
 
-    <h2>Mine færdigheder</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
+    <h1>Mit navn er Zehra </h1>
+    <p>Jeg er studerende fra Rysensteen Gymnasium og går i 3.t</p>
 
 
-    <h2>Følg mig</h2>
-    <a href="https://github.com/ditbrugernavn">GitHub</a>
-    <a href="https://www.linkedin.com/in/ditbrugernavn/">LinkedIn</a>
+    <h1>Mine Kontaktoplysninger</h1>
+    <div class="contact-box" onmouseover="showInfo()" onmouseout="hideInfo()">
+        <div class="contact-info" id="info">
+            <p>Email: zehr0169@rysesnteen.com</p>
+            <p>Telefon: 12345678</p>
+        </div>
+        <p>Bevæg musen!</p>
+    </div>
 
+    <script>
+        function showInfo() {
+            document.getElementById('info').style.display = 'block'; // Viser kontaktoplysningerne
+        }
 
-
+        function hideInfo() {
+            document.getElementById('info').style.display = 'none'; // Skjuler kontaktoplysningerne
+        }
+</script>
 </body>
 </html
